@startuml
title Modelo Lógico (Esquema Relacional) — Sprint 1\nWireless HeatMapper
skinparam classBackgroundColor #EBF5FB
skinparam classBorderColor #2980B9
skinparam classHeaderBackgroundColor #2980B9
skinparam classHeaderFontColor white
skinparam arrowColor #2980B9
hide circle

class "usuario" <<Table>> {
  PK id : SERIAL
  --
  email : VARCHAR(255) UNIQUE NOT NULL
  password_hash : VARCHAR(255) NOT NULL
  nombre : VARCHAR(120) NOT NULL
  rol : VARCHAR(30) NOT NULL DEFAULT 'tecnico'
  activo : BOOLEAN NOT NULL DEFAULT TRUE
  ultimo_acceso : TIMESTAMPTZ
  created_at : TIMESTAMPTZ DEFAULT now()
}

class "refresh_token" <<Table>> {
  PK id : SERIAL
  --
  token : VARCHAR(64) UNIQUE NOT NULL
  expires_at : TIMESTAMPTZ NOT NULL
  created_at : TIMESTAMPTZ DEFAULT now()
  FK usuario_id : INTEGER NOT NULL ON DELETE CASCADE
}

class "cliente" <<Table>> {
  PK id : SERIAL
  --
  nombre : VARCHAR(100) UNIQUE NOT NULL
  activo : BOOLEAN NOT NULL DEFAULT TRUE
  created_at : TIMESTAMPTZ DEFAULT now()
}

class "proyecto" <<Table>> {
  PK id : SERIAL
  --
  nombre : VARCHAR(200) NOT NULL
  descripcion : VARCHAR(500)
  estado : estado_proyecto NOT NULL DEFAULT 'nuevo'
  ultima_actividad : TIMESTAMPTZ DEFAULT now()
  cantidad_puntos : INTEGER NOT NULL DEFAULT 0
  created_at : TIMESTAMPTZ DEFAULT now()
  FK tecnico_id : INTEGER NOT NULL
  FK cliente_id : INTEGER
}

"usuario" "1" --> "0..*" "refresh_token" : usuario_id
"usuario" "1" --> "0..*" "proyecto" : tecnico_id
"cliente" "1" --> "0..*" "proyecto" : cliente_id
@enduml
